# locale-builder

./: .gitignore  CMakeLists.txt
res/: index.htm  main.js  style.css
res/components/: App.js
res/components/tree/: Tree.js  TreeNode.js
res/core/: render.js  translator.js
res/state/: locale.js  treeState.js
src/: main.cpp
